# leaf-wood-segmentation-with-deep-learning

./: README.md  leaf-wood-segmentation.ipynb  pointcloud.py  pointcloud_segmentation.ipynb  pyproject.toml  utils.py
cfg/: kpc_infer.yml  kpconv_leafwood.yml  pointtransformer_leafwood.yml  pointtransformer_leafwood_docker.yml  pointtransformer_lw_tiles.yml  pt_infer.yml  pt_train.yml  pt_train_docker.yml  randlanet_leafwood.yml  randlanet_leafwood_docker.yml  randlanet_leafwood_infer.yml  rln_infer.yml
docker/: Dockerfile  docker-compose.yml  docker.sh  requirements.txt
notebooks/: LeWOS_evaluation.ipynb  data_preprocessing.ipynb  leaf-wood-segmentation.ipynb  open3dml_playground.ipynb  paper_supplementary_notebook.ipynb  pcl_segmentation_julia.ipynb  pointcloud_segmentation.ipynb
scripts/: evaluate.py  infer.py  train.py  visualise.py  visualise_leafwood_dataset.py
src/pclbox/models/: models.py
src/pclbox/utils/: utils.py
